--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -1,5 +1,4 @@
 [versions]
-# Added by buildout at 2015-03-12 14:09:51.178126
 Chameleon = 2.16
 Products.Clouseau = 1.0
 Products.DocFinderTab = 1.0.5
@@ -9,18 +8,18 @@ collective.profiler = 0.3
 collective.recipe.backup = 2.18
 collective.recipe.plonesite = 1.8.2
 collective.z3cform.colorpicker = 1.1
-eea.faceted.vocabularies = 4.9
-eea.facetednavigation = 7.0
 gdata = 2.0.18
 geopy = 0.99
-icalendar = 3.6.2
+icalendar = 3.7
 ipdb = 0.8
 ipython = 2.1.0
+oauthlib = 0.7.2
+persistent = 4.0.8
 plone.app.debugtoolbar = 1.0a3
-plone.app.robotframework = 0.9.8
 plone.event = 1.1
 plone.formwidget.recurrence = 1.2.3
 pygeoif = 0.4.1
+requests = 2.7.0
 robotframework-ride = 1.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
@@ -44,11 +43,11 @@ Pairtree = 0.5.8
 Products.AdvancedQuery = 3.0.3
 
 # Required by:
-# plone.app.event==1.2.7
+# plone.app.event==1.1.4
 Products.DateRecurringIndex = 2.1
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 Products.ShibbolethPermissions = 0.8b2
 
 # Required by:
@@ -56,36 +55,36 @@ Products.ShibbolethPermissions = 0.8b2
 SPARQLWrapper = 1.6.0
 
 # Required by:
-# plone.app.event==1.2.7
+# plone.app.event==1.1.4
 collective.elephantvocabulary = 0.2.4
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.geo.contentlocations = 3.1
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.geo.geographer = 2.0
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.geo.kml = 3.2
 
 # Required by:
 # collective.z3cform.mapwidget==2.0
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.geo.mapwidget = 2.1.2
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.geo.openlayers = 3.1
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.geo.settings = 3.0
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.googleanalytics = 1.4.3
 
 # Required by:
@@ -93,35 +92,31 @@ collective.googleanalytics = 1.4.3
 collective.indexing = 1.8
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.jsonmigrator = 0.2
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.onlogin = 1.0
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
-collective.quickupload = 1.6.3
+# org.bccvl.site==1.8.4.dev0
+collective.quickupload = 1.6.4
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.setuphelpers = 0.6.3
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.z3cform.mapwidget = 2.0
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 collective.z3cform.widgets = 1.0b9
 
 # Required by:
-# eea.facetednavigation==7.0
-eea.jquery = 7.8
-
-# Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 five.pt = 2.2.2
 
 # Required by:
@@ -133,39 +128,39 @@ html5lib = 0.95
 isodate = 0.5.0
 
 # Required by:
-# BTrees==4.0.8
-persistent = 4.0.8
-
-# Required by:
-# org.bccvl.theme==1.6.5-dev
+# org.bccvl.theme==1.8.2.dev0
 plone.app.themingplugins = 1.0b1
 
 # Required by:
-# plone.app.contenttypes==1.1b2
+# plone.app.contenttypes==1.1b3
 plone.formwidget.querystring = 1.1.2
 
 # Required by:
 # collective.profiler==0.3
-profilehooks = 1.7
+profilehooks = 1.7.1
 
 # Required by:
 # rdflib==4.1.2
 pyparsing = 2.0.2
 
 # Required by:
-# org.bccvl.compute==1.6.7-dev
+# org.bccvl.compute==1.8.1-dev
 python-xmp-toolkit = 2.0.1
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
+requests-oauthlib = 0.5.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
 sc.social.like = 1.0.1
 
 # Required by:
-# org.bccvl.site==1.8.0-dev
+# org.bccvl.site==1.8.4.dev0
 transmogrify.dexterity = 1.2
 
 # Required by:
-# collective.quickupload==1.6.3
+# collective.quickupload==1.6.4
 ua-parser = 0.3.5
 
 # Required by:
@@ -173,7 +168,698 @@ ua-parser = 0.3.5
 z3c.jbot = 0.7.2
 
 # Required by:
-# collective.xmltestreport==1.3.1
+# collective.xmltestreport==1.3.2
+z3c.recipe.scripts = 1.0.1
+
+# Required by:
+# z3c.recipe.staticlxml==0.10
+zc.recipe.cmmi = 1.3.6
+
+# Added by buildout at 2015-06-18 22:49:03.881670
+Chameleon = 2.16
+Products.Clouseau = 1.0
+Products.DocFinderTab = 1.0.5
+Products.PrintingMailHost = 0.7
+Products.membrane = 2.1.11
+collective.profiler = 0.3
+collective.recipe.backup = 2.18
+collective.recipe.plonesite = 1.8.2
+collective.z3cform.colorpicker = 1.1
+gdata = 2.0.18
+geopy = 0.99
+icalendar = 3.7
+ipdb = 0.8
+ipython = 2.1.0
+oauthlib = 0.7.2
+persistent = 4.0.8
+plone.app.debugtoolbar = 1.0a3
+plone.event = 1.1
+plone.formwidget.recurrence = 1.2.3
+pygeoif = 0.4.1
+requests = 2.7.0
+robotframework-ride = 1.1
+sourcecodegen = 0.6.14
+z3c.pt = 2.2.3
+z3c.recipe.staticlxml = 0.10
+zptlint = 0.2.4
+
+# Required by:
+# rdflib-zodb==1.0
+BTrees = 4.0.8
+
+# Required by:
+# collective.geo.mapwidget==2.1.2
+BeautifulSoup = 3.2.1
+
+# Required by:
+# ordf==0.36-gu1
+Pairtree = 0.5.8
+
+# Required by:
+# plone.app.folderui==0.03-gurc5
+Products.AdvancedQuery = 3.0.3
+
+# Required by:
+# plone.app.event==1.1.4
+Products.DateRecurringIndex = 2.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+Products.ShibbolethPermissions = 0.8b2
+
+# Required by:
+# rdflib==4.1.2
+SPARQLWrapper = 1.6.0
+
+# Required by:
+# plone.app.event==1.1.4
+collective.elephantvocabulary = 0.2.4
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.contentlocations = 3.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.geographer = 2.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.kml = 3.2
+
+# Required by:
+# collective.z3cform.mapwidget==2.0
+# org.bccvl.site==1.8.4.dev0
+collective.geo.mapwidget = 2.1.2
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.openlayers = 3.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.settings = 3.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.googleanalytics = 1.4.3
+
+# Required by:
+# dexterity.membrane==0.4
+collective.indexing = 1.8
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.jsonmigrator = 0.2
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.onlogin = 1.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.quickupload = 1.6.4
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.setuphelpers = 0.6.3
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.z3cform.mapwidget = 2.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.z3cform.widgets = 1.0b9
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+five.pt = 2.2.2
+
+# Required by:
+# rdflib==4.1.2
+html5lib = 0.95
+
+# Required by:
+# rdflib==4.1.2
+isodate = 0.5.0
+
+# Required by:
+# org.bccvl.theme==1.8.2.dev0
+plone.app.themingplugins = 1.0b1
+
+# Required by:
+# plone.app.contenttypes==1.1b3
+plone.formwidget.querystring = 1.1.2
+
+# Required by:
+# collective.profiler==0.3
+profilehooks = 1.7.1
+
+# Required by:
+# rdflib==4.1.2
+pyparsing = 2.0.2
+
+# Required by:
+# org.bccvl.compute==1.8.1-dev
+python-xmp-toolkit = 2.0.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+requests-oauthlib = 0.5.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+sc.social.like = 1.0.1
+
+# Required by:
+# collective.quickupload==1.6.4
+ua-parser = 0.3.5
+
+# Required by:
+# plone.app.themingplugins==1.0b1
+z3c.jbot = 0.7.2
+
+# Required by:
+# collective.xmltestreport==1.3.2
+z3c.recipe.scripts = 1.0.1
+
+# Required by:
+# z3c.recipe.staticlxml==0.10
+zc.recipe.cmmi = 1.3.6
+
+# Added by buildout at 2015-06-18 23:03:58.434633
+Chameleon = 2.16
+Products.Clouseau = 1.0
+Products.DocFinderTab = 1.0.5
+Products.PrintingMailHost = 0.7
+Products.membrane = 2.1.11
+collective.profiler = 0.3
+collective.recipe.backup = 2.18
+collective.recipe.plonesite = 1.8.2
+collective.z3cform.colorpicker = 1.1
+gdata = 2.0.18
+geopy = 0.99
+icalendar = 3.7
+ipdb = 0.8
+ipython = 2.1.0
+oauthlib = 0.7.2
+persistent = 4.0.8
+plone.app.debugtoolbar = 1.0a3
+plone.event = 1.1
+plone.formwidget.recurrence = 1.2.3
+pygeoif = 0.4.1
+requests = 2.7.0
+robotframework-ride = 1.1
+sourcecodegen = 0.6.14
+z3c.pt = 2.2.3
+z3c.recipe.staticlxml = 0.10
+zptlint = 0.2.4
+
+# Required by:
+# rdflib-zodb==1.0
+BTrees = 4.0.8
+
+# Required by:
+# collective.geo.mapwidget==2.1.2
+BeautifulSoup = 3.2.1
+
+# Required by:
+# ordf==0.36-gu1
+Pairtree = 0.5.8
+
+# Required by:
+# plone.app.folderui==0.03-gurc5
+Products.AdvancedQuery = 3.0.3
+
+# Required by:
+# plone.app.event==1.1.4
+Products.DateRecurringIndex = 2.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+Products.ShibbolethPermissions = 0.8b2
+
+# Required by:
+# rdflib==4.1.2
+SPARQLWrapper = 1.6.0
+
+# Required by:
+# plone.app.event==1.1.4
+collective.elephantvocabulary = 0.2.4
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.contentlocations = 3.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.geographer = 2.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.kml = 3.2
+
+# Required by:
+# collective.z3cform.mapwidget==2.0
+# org.bccvl.site==1.8.4.dev0
+collective.geo.mapwidget = 2.1.2
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.openlayers = 3.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.settings = 3.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.googleanalytics = 1.4.3
+
+# Required by:
+# dexterity.membrane==0.4
+collective.indexing = 1.8
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.jsonmigrator = 0.2
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.onlogin = 1.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.quickupload = 1.6.4
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.setuphelpers = 0.6.3
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.z3cform.mapwidget = 2.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.z3cform.widgets = 1.0b9
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+five.pt = 2.2.2
+
+# Required by:
+# rdflib==4.1.2
+html5lib = 0.95
+
+# Required by:
+# rdflib==4.1.2
+isodate = 0.5.0
+
+# Required by:
+# org.bccvl.theme==1.8.2.dev0
+plone.app.themingplugins = 1.0b1
+
+# Required by:
+# plone.app.contenttypes==1.1b3
+plone.formwidget.querystring = 1.1.2
+
+# Required by:
+# collective.profiler==0.3
+profilehooks = 1.7.1
+
+# Required by:
+# rdflib==4.1.2
+pyparsing = 2.0.2
+
+# Required by:
+# org.bccvl.compute==1.8.1-dev
+python-xmp-toolkit = 2.0.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+requests-oauthlib = 0.5.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+sc.social.like = 1.0.1
+
+# Required by:
+# collective.quickupload==1.6.4
+ua-parser = 0.3.5
+
+# Required by:
+# plone.app.themingplugins==1.0b1
+z3c.jbot = 0.7.2
+
+# Required by:
+# collective.xmltestreport==1.3.2
+z3c.recipe.scripts = 1.0.1
+
+# Required by:
+# z3c.recipe.staticlxml==0.10
+zc.recipe.cmmi = 1.3.6
+
+# Added by buildout at 2015-06-18 23:25:47.515867
+Chameleon = 2.16
+Products.Clouseau = 1.0
+Products.DocFinderTab = 1.0.5
+Products.PrintingMailHost = 0.7
+Products.membrane = 2.1.11
+collective.profiler = 0.3
+collective.recipe.backup = 2.18
+collective.recipe.plonesite = 1.8.2
+collective.z3cform.colorpicker = 1.1
+gdata = 2.0.18
+geopy = 0.99
+icalendar = 3.7
+ipdb = 0.8
+ipython = 2.1.0
+oauthlib = 0.7.2
+persistent = 4.0.8
+plone.app.debugtoolbar = 1.0a3
+plone.event = 1.1
+plone.formwidget.recurrence = 1.2.3
+pygeoif = 0.4.1
+requests = 2.7.0
+robotframework-ride = 1.1
+sourcecodegen = 0.6.14
+z3c.pt = 2.2.3
+z3c.recipe.staticlxml = 0.10
+zptlint = 0.2.4
+
+# Required by:
+# rdflib-zodb==1.0
+BTrees = 4.0.8
+
+# Required by:
+# collective.geo.mapwidget==2.1.2
+BeautifulSoup = 3.2.1
+
+# Required by:
+# ordf==0.36-gu1
+Pairtree = 0.5.8
+
+# Required by:
+# plone.app.folderui==0.03-gurc5
+Products.AdvancedQuery = 3.0.3
+
+# Required by:
+# plone.app.event==1.1.4
+Products.DateRecurringIndex = 2.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+Products.ShibbolethPermissions = 0.8b2
+
+# Required by:
+# rdflib==4.1.2
+SPARQLWrapper = 1.6.0
+
+# Required by:
+# plone.app.event==1.1.4
+collective.elephantvocabulary = 0.2.4
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.contentlocations = 3.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.geographer = 2.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.kml = 3.2
+
+# Required by:
+# collective.z3cform.mapwidget==2.0
+# org.bccvl.site==1.8.4.dev0
+collective.geo.mapwidget = 2.1.2
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.openlayers = 3.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.settings = 3.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.googleanalytics = 1.4.3
+
+# Required by:
+# dexterity.membrane==0.4
+collective.indexing = 1.8
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.jsonmigrator = 0.2
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.onlogin = 1.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.quickupload = 1.6.4
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.setuphelpers = 0.6.3
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.z3cform.mapwidget = 2.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.z3cform.widgets = 1.0b9
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+five.pt = 2.2.2
+
+# Required by:
+# rdflib==4.1.2
+html5lib = 0.95
+
+# Required by:
+# rdflib==4.1.2
+isodate = 0.5.0
+
+# Required by:
+# org.bccvl.theme==1.8.2.dev0
+plone.app.themingplugins = 1.0b1
+
+# Required by:
+# plone.app.contenttypes==1.1b3
+plone.formwidget.querystring = 1.1.2
+
+# Required by:
+# collective.profiler==0.3
+profilehooks = 1.7.1
+
+# Required by:
+# rdflib==4.1.2
+pyparsing = 2.0.2
+
+# Required by:
+# org.bccvl.compute==1.8.1-dev
+python-xmp-toolkit = 2.0.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+requests-oauthlib = 0.5.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+sc.social.like = 1.0.1
+
+# Required by:
+# collective.quickupload==1.6.4
+ua-parser = 0.3.5
+
+# Required by:
+# plone.app.themingplugins==1.0b1
+z3c.jbot = 0.7.2
+
+# Required by:
+# collective.xmltestreport==1.3.2
+z3c.recipe.scripts = 1.0.1
+
+# Required by:
+# z3c.recipe.staticlxml==0.10
+zc.recipe.cmmi = 1.3.6
+
+# Added by buildout at 2015-06-18 23:32:15.636259
+Chameleon = 2.16
+Products.Clouseau = 1.0
+Products.DocFinderTab = 1.0.5
+Products.PrintingMailHost = 0.7
+collective.profiler = 0.3
+collective.recipe.backup = 2.18
+collective.recipe.plonesite = 1.8.2
+collective.z3cform.colorpicker = 1.1
+gdata = 2.0.18
+geopy = 0.99
+icalendar = 3.7
+ipdb = 0.8
+ipython = 2.1.0
+oauthlib = 0.7.2
+persistent = 4.0.8
+plone.app.debugtoolbar = 1.0a3
+plone.event = 1.1
+plone.formwidget.recurrence = 1.2.3
+pygeoif = 0.4.1
+requests = 2.7.0
+robotframework-ride = 1.1
+sourcecodegen = 0.6.14
+z3c.pt = 2.2.3
+z3c.recipe.staticlxml = 0.10
+zptlint = 0.2.4
+
+# Required by:
+# rdflib-zodb==1.0
+BTrees = 4.0.8
+
+# Required by:
+# collective.geo.mapwidget==2.1.2
+BeautifulSoup = 3.2.1
+
+# Required by:
+# ordf==0.36-gu1
+Pairtree = 0.5.8
+
+# Required by:
+# plone.app.folderui==0.03-gurc5
+Products.AdvancedQuery = 3.0.3
+
+# Required by:
+# plone.app.event==1.1.4
+Products.DateRecurringIndex = 2.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+Products.ShibbolethPermissions = 0.8b2
+
+# Required by:
+# rdflib==4.1.2
+SPARQLWrapper = 1.6.0
+
+# Required by:
+# plone.app.event==1.1.4
+collective.elephantvocabulary = 0.2.4
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.contentlocations = 3.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.geographer = 2.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.kml = 3.2
+
+# Required by:
+# collective.z3cform.mapwidget==2.0
+# org.bccvl.site==1.8.4.dev0
+collective.geo.mapwidget = 2.1.2
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.openlayers = 3.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.geo.settings = 3.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.googleanalytics = 1.4.3
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.indexing = 1.8
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.jsonmigrator = 0.2
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.onlogin = 1.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.quickupload = 1.6.4
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.setuphelpers = 0.6.3
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.z3cform.mapwidget = 2.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+collective.z3cform.widgets = 1.0b9
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+five.pt = 2.2.2
+
+# Required by:
+# rdflib==4.1.2
+html5lib = 0.95
+
+# Required by:
+# rdflib==4.1.2
+isodate = 0.5.0
+
+# Required by:
+# org.bccvl.theme==1.8.2.dev0
+plone.app.themingplugins = 1.0b1
+
+# Required by:
+# plone.app.contenttypes==1.1b3
+plone.formwidget.querystring = 1.1.2
+
+# Required by:
+# collective.profiler==0.3
+profilehooks = 1.7.1
+
+# Required by:
+# rdflib==4.1.2
+pyparsing = 2.0.2
+
+# Required by:
+# org.bccvl.compute==1.8.1-dev
+python-xmp-toolkit = 2.0.1
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+requests-oauthlib = 0.5.0
+
+# Required by:
+# org.bccvl.site==1.8.4.dev0
+sc.social.like = 1.0.1
+
+# Required by:
+# collective.quickupload==1.6.4
+ua-parser = 0.3.5
+
+# Required by:
+# plone.app.themingplugins==1.0b1
+z3c.jbot = 0.7.2
+
+# Required by:
+# collective.xmltestreport==1.3.2
 z3c.recipe.scripts = 1.0.1
 
 # Required by:
