--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -21,11 +21,11 @@ setuptools = 2.2
 mr.developer = 1.26
 
 # BCCVL Projects
-org.bccvl.compute = 1.8.1rc1
-org.bccvl.site = 1.8.4rc2
-org.bccvl.testsetup = 1.8.1rc1
-org.bccvl.theme = 1.8.2rc2
-org.bccvl.tasks = 1.8.1rc3
+org.bccvl.compute = 1.8.1
+org.bccvl.site = 1.8.4
+org.bccvl.testsetup = 1.8.1
+org.bccvl.theme = 1.8.2
+org.bccvl.tasks = 1.8.1
 
 celery = 3.1.17
 kombu = 3.0.24
