--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -3,7 +3,6 @@ Chameleon = 2.16
 Products.Clouseau = 1.0
 Products.DocFinderTab = 1.0.5
 Products.PrintingMailHost = 0.7
-Products.membrane = 2.1.11
 collective.profiler = 0.3
 collective.recipe.backup = 2.18
 collective.recipe.plonesite = 1.8.2
@@ -16,6 +15,7 @@ ipython = 2.1.0
 oauthlib = 0.7.2
 persistent = 4.0.8
 plone.app.debugtoolbar = 1.0a3
+plone.app.robotframework = 0.9.8
 plone.event = 1.1
 plone.formwidget.recurrence = 1.2.3
 pygeoif = 0.4.1
@@ -47,7 +47,7 @@ Products.AdvancedQuery = 3.0.3
 Products.DateRecurringIndex = 2.1
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 Products.ShibbolethPermissions = 0.8b2
 
 # Required by:
@@ -59,64 +59,64 @@ SPARQLWrapper = 1.6.0
 collective.elephantvocabulary = 0.2.4
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.geo.contentlocations = 3.1
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.geo.geographer = 2.0
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.geo.kml = 3.2
 
 # Required by:
 # collective.z3cform.mapwidget==2.0
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.geo.mapwidget = 2.1.2
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.geo.openlayers = 3.1
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.geo.settings = 3.0
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.googleanalytics = 1.4.3
 
 # Required by:
-# dexterity.membrane==0.4
+# org.bccvl.site==1.8.4
 collective.indexing = 1.8
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.jsonmigrator = 0.2
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.onlogin = 1.0
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
 collective.quickupload = 1.6.4
+# org.bccvl.site==1.8.4
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.setuphelpers = 0.6.3
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.z3cform.mapwidget = 2.0
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 collective.z3cform.widgets = 1.0b9
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 five.pt = 2.2.2
 
 # Required by:
@@ -128,7 +128,7 @@ html5lib = 0.95
 isodate = 0.5.0
 
 # Required by:
-# org.bccvl.theme==1.8.2.dev0
+# org.bccvl.theme==1.8.3.dev
 plone.app.themingplugins = 1.0b1
 
 # Required by:
@@ -144,707 +144,20 @@ profilehooks = 1.7.1
 pyparsing = 2.0.2
 
 # Required by:
-# org.bccvl.compute==1.8.1-dev
+# org.bccvl.compute==1.8.2.dev
 python-xmp-toolkit = 2.0.1
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 requests-oauthlib = 0.5.0
 
 # Required by:
-# org.bccvl.site==1.8.4.dev0
+# org.bccvl.site==1.8.4
 sc.social.like = 1.0.1
 
 # Required by:
-# collective.quickupload==1.6.4
-ua-parser = 0.3.5
-
-# Required by:
-# plone.app.themingplugins==1.0b1
-z3c.jbot = 0.7.2
-
-# Required by:
-# collective.xmltestreport==1.3.2
-z3c.recipe.scripts = 1.0.1
-
-# Required by:
-# z3c.recipe.staticlxml==0.10
-zc.recipe.cmmi = 1.3.6
-
-# Added by buildout at 2015-06-18 22:49:03.881670
-Chameleon = 2.16
-Products.Clouseau = 1.0
-Products.DocFinderTab = 1.0.5
-Products.PrintingMailHost = 0.7
-Products.membrane = 2.1.11
-collective.profiler = 0.3
-collective.recipe.backup = 2.18
-collective.recipe.plonesite = 1.8.2
-collective.z3cform.colorpicker = 1.1
-gdata = 2.0.18
-geopy = 0.99
-icalendar = 3.7
-ipdb = 0.8
-ipython = 2.1.0
-oauthlib = 0.7.2
-persistent = 4.0.8
-plone.app.debugtoolbar = 1.0a3
-plone.event = 1.1
-plone.formwidget.recurrence = 1.2.3
-pygeoif = 0.4.1
-requests = 2.7.0
-robotframework-ride = 1.1
-sourcecodegen = 0.6.14
-z3c.pt = 2.2.3
-z3c.recipe.staticlxml = 0.10
-zptlint = 0.2.4
-
-# Required by:
-# rdflib-zodb==1.0
-BTrees = 4.0.8
-
-# Required by:
-# collective.geo.mapwidget==2.1.2
-BeautifulSoup = 3.2.1
-
-# Required by:
-# ordf==0.36-gu1
-Pairtree = 0.5.8
-
-# Required by:
-# plone.app.folderui==0.03-gurc5
-Products.AdvancedQuery = 3.0.3
-
-# Required by:
-# plone.app.event==1.1.4
-Products.DateRecurringIndex = 2.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-Products.ShibbolethPermissions = 0.8b2
-
-# Required by:
-# rdflib==4.1.2
-SPARQLWrapper = 1.6.0
-
-# Required by:
-# plone.app.event==1.1.4
-collective.elephantvocabulary = 0.2.4
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.contentlocations = 3.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.geographer = 2.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.kml = 3.2
-
-# Required by:
-# collective.z3cform.mapwidget==2.0
-# org.bccvl.site==1.8.4.dev0
-collective.geo.mapwidget = 2.1.2
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.openlayers = 3.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.settings = 3.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.googleanalytics = 1.4.3
-
-# Required by:
-# dexterity.membrane==0.4
-collective.indexing = 1.8
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.jsonmigrator = 0.2
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.onlogin = 1.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.quickupload = 1.6.4
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.setuphelpers = 0.6.3
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.z3cform.mapwidget = 2.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.z3cform.widgets = 1.0b9
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-five.pt = 2.2.2
-
-# Required by:
-# rdflib==4.1.2
-html5lib = 0.95
-
-# Required by:
-# rdflib==4.1.2
-isodate = 0.5.0
-
-# Required by:
-# org.bccvl.theme==1.8.2.dev0
-plone.app.themingplugins = 1.0b1
-
-# Required by:
-# plone.app.contenttypes==1.1b3
-plone.formwidget.querystring = 1.1.2
-
-# Required by:
-# collective.profiler==0.3
-profilehooks = 1.7.1
-
-# Required by:
-# rdflib==4.1.2
-pyparsing = 2.0.2
-
-# Required by:
-# org.bccvl.compute==1.8.1-dev
-python-xmp-toolkit = 2.0.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-requests-oauthlib = 0.5.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-sc.social.like = 1.0.1
-
-# Required by:
-# collective.quickupload==1.6.4
-ua-parser = 0.3.5
-
-# Required by:
-# plone.app.themingplugins==1.0b1
-z3c.jbot = 0.7.2
-
-# Required by:
-# collective.xmltestreport==1.3.2
-z3c.recipe.scripts = 1.0.1
-
-# Required by:
-# z3c.recipe.staticlxml==0.10
-zc.recipe.cmmi = 1.3.6
-
-# Added by buildout at 2015-06-18 23:03:58.434633
-Chameleon = 2.16
-Products.Clouseau = 1.0
-Products.DocFinderTab = 1.0.5
-Products.PrintingMailHost = 0.7
-Products.membrane = 2.1.11
-collective.profiler = 0.3
-collective.recipe.backup = 2.18
-collective.recipe.plonesite = 1.8.2
-collective.z3cform.colorpicker = 1.1
-gdata = 2.0.18
-geopy = 0.99
-icalendar = 3.7
-ipdb = 0.8
-ipython = 2.1.0
-oauthlib = 0.7.2
-persistent = 4.0.8
-plone.app.debugtoolbar = 1.0a3
-plone.event = 1.1
-plone.formwidget.recurrence = 1.2.3
-pygeoif = 0.4.1
-requests = 2.7.0
-robotframework-ride = 1.1
-sourcecodegen = 0.6.14
-z3c.pt = 2.2.3
-z3c.recipe.staticlxml = 0.10
-zptlint = 0.2.4
-
-# Required by:
-# rdflib-zodb==1.0
-BTrees = 4.0.8
-
-# Required by:
-# collective.geo.mapwidget==2.1.2
-BeautifulSoup = 3.2.1
-
-# Required by:
-# ordf==0.36-gu1
-Pairtree = 0.5.8
-
-# Required by:
-# plone.app.folderui==0.03-gurc5
-Products.AdvancedQuery = 3.0.3
-
-# Required by:
-# plone.app.event==1.1.4
-Products.DateRecurringIndex = 2.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-Products.ShibbolethPermissions = 0.8b2
-
-# Required by:
-# rdflib==4.1.2
-SPARQLWrapper = 1.6.0
-
-# Required by:
-# plone.app.event==1.1.4
-collective.elephantvocabulary = 0.2.4
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.contentlocations = 3.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.geographer = 2.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.kml = 3.2
-
-# Required by:
-# collective.z3cform.mapwidget==2.0
-# org.bccvl.site==1.8.4.dev0
-collective.geo.mapwidget = 2.1.2
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.openlayers = 3.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.settings = 3.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.googleanalytics = 1.4.3
-
-# Required by:
-# dexterity.membrane==0.4
-collective.indexing = 1.8
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.jsonmigrator = 0.2
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.onlogin = 1.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.quickupload = 1.6.4
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.setuphelpers = 0.6.3
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.z3cform.mapwidget = 2.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.z3cform.widgets = 1.0b9
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-five.pt = 2.2.2
-
-# Required by:
-# rdflib==4.1.2
-html5lib = 0.95
-
-# Required by:
-# rdflib==4.1.2
-isodate = 0.5.0
-
-# Required by:
-# org.bccvl.theme==1.8.2.dev0
-plone.app.themingplugins = 1.0b1
-
-# Required by:
-# plone.app.contenttypes==1.1b3
-plone.formwidget.querystring = 1.1.2
-
-# Required by:
-# collective.profiler==0.3
-profilehooks = 1.7.1
-
-# Required by:
-# rdflib==4.1.2
-pyparsing = 2.0.2
-
-# Required by:
-# org.bccvl.compute==1.8.1-dev
-python-xmp-toolkit = 2.0.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-requests-oauthlib = 0.5.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-sc.social.like = 1.0.1
-
-# Required by:
-# collective.quickupload==1.6.4
-ua-parser = 0.3.5
-
-# Required by:
-# plone.app.themingplugins==1.0b1
-z3c.jbot = 0.7.2
-
-# Required by:
-# collective.xmltestreport==1.3.2
-z3c.recipe.scripts = 1.0.1
-
-# Required by:
-# z3c.recipe.staticlxml==0.10
-zc.recipe.cmmi = 1.3.6
-
-# Added by buildout at 2015-06-18 23:25:47.515867
-Chameleon = 2.16
-Products.Clouseau = 1.0
-Products.DocFinderTab = 1.0.5
-Products.PrintingMailHost = 0.7
-Products.membrane = 2.1.11
-collective.profiler = 0.3
-collective.recipe.backup = 2.18
-collective.recipe.plonesite = 1.8.2
-collective.z3cform.colorpicker = 1.1
-gdata = 2.0.18
-geopy = 0.99
-icalendar = 3.7
-ipdb = 0.8
-ipython = 2.1.0
-oauthlib = 0.7.2
-persistent = 4.0.8
-plone.app.debugtoolbar = 1.0a3
-plone.event = 1.1
-plone.formwidget.recurrence = 1.2.3
-pygeoif = 0.4.1
-requests = 2.7.0
-robotframework-ride = 1.1
-sourcecodegen = 0.6.14
-z3c.pt = 2.2.3
-z3c.recipe.staticlxml = 0.10
-zptlint = 0.2.4
-
-# Required by:
-# rdflib-zodb==1.0
-BTrees = 4.0.8
-
-# Required by:
-# collective.geo.mapwidget==2.1.2
-BeautifulSoup = 3.2.1
-
-# Required by:
-# ordf==0.36-gu1
-Pairtree = 0.5.8
-
-# Required by:
-# plone.app.folderui==0.03-gurc5
-Products.AdvancedQuery = 3.0.3
-
-# Required by:
-# plone.app.event==1.1.4
-Products.DateRecurringIndex = 2.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-Products.ShibbolethPermissions = 0.8b2
-
-# Required by:
-# rdflib==4.1.2
-SPARQLWrapper = 1.6.0
-
-# Required by:
-# plone.app.event==1.1.4
-collective.elephantvocabulary = 0.2.4
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.contentlocations = 3.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.geographer = 2.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.kml = 3.2
-
-# Required by:
-# collective.z3cform.mapwidget==2.0
-# org.bccvl.site==1.8.4.dev0
-collective.geo.mapwidget = 2.1.2
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.openlayers = 3.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.settings = 3.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.googleanalytics = 1.4.3
-
-# Required by:
-# dexterity.membrane==0.4
-collective.indexing = 1.8
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.jsonmigrator = 0.2
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.onlogin = 1.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.quickupload = 1.6.4
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.setuphelpers = 0.6.3
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.z3cform.mapwidget = 2.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.z3cform.widgets = 1.0b9
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-five.pt = 2.2.2
-
-# Required by:
-# rdflib==4.1.2
-html5lib = 0.95
-
-# Required by:
-# rdflib==4.1.2
-isodate = 0.5.0
-
-# Required by:
-# org.bccvl.theme==1.8.2.dev0
-plone.app.themingplugins = 1.0b1
-
-# Required by:
-# plone.app.contenttypes==1.1b3
-plone.formwidget.querystring = 1.1.2
-
-# Required by:
-# collective.profiler==0.3
-profilehooks = 1.7.1
-
-# Required by:
-# rdflib==4.1.2
-pyparsing = 2.0.2
-
-# Required by:
-# org.bccvl.compute==1.8.1-dev
-python-xmp-toolkit = 2.0.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-requests-oauthlib = 0.5.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-sc.social.like = 1.0.1
-
-# Required by:
-# collective.quickupload==1.6.4
-ua-parser = 0.3.5
-
-# Required by:
-# plone.app.themingplugins==1.0b1
-z3c.jbot = 0.7.2
-
-# Required by:
-# collective.xmltestreport==1.3.2
-z3c.recipe.scripts = 1.0.1
-
-# Required by:
-# z3c.recipe.staticlxml==0.10
-zc.recipe.cmmi = 1.3.6
-
-# Added by buildout at 2015-06-18 23:32:15.636259
-Chameleon = 2.16
-Products.Clouseau = 1.0
-Products.DocFinderTab = 1.0.5
-Products.PrintingMailHost = 0.7
-collective.profiler = 0.3
-collective.recipe.backup = 2.18
-collective.recipe.plonesite = 1.8.2
-collective.z3cform.colorpicker = 1.1
-gdata = 2.0.18
-geopy = 0.99
-icalendar = 3.7
-ipdb = 0.8
-ipython = 2.1.0
-oauthlib = 0.7.2
-persistent = 4.0.8
-plone.app.debugtoolbar = 1.0a3
-plone.event = 1.1
-plone.formwidget.recurrence = 1.2.3
-pygeoif = 0.4.1
-requests = 2.7.0
-robotframework-ride = 1.1
-sourcecodegen = 0.6.14
-z3c.pt = 2.2.3
-z3c.recipe.staticlxml = 0.10
-zptlint = 0.2.4
-
-# Required by:
-# rdflib-zodb==1.0
-BTrees = 4.0.8
-
-# Required by:
-# collective.geo.mapwidget==2.1.2
-BeautifulSoup = 3.2.1
-
-# Required by:
-# ordf==0.36-gu1
-Pairtree = 0.5.8
-
-# Required by:
-# plone.app.folderui==0.03-gurc5
-Products.AdvancedQuery = 3.0.3
-
-# Required by:
-# plone.app.event==1.1.4
-Products.DateRecurringIndex = 2.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-Products.ShibbolethPermissions = 0.8b2
-
-# Required by:
-# rdflib==4.1.2
-SPARQLWrapper = 1.6.0
-
-# Required by:
-# plone.app.event==1.1.4
-collective.elephantvocabulary = 0.2.4
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.contentlocations = 3.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.geographer = 2.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.kml = 3.2
-
-# Required by:
-# collective.z3cform.mapwidget==2.0
-# org.bccvl.site==1.8.4.dev0
-collective.geo.mapwidget = 2.1.2
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.openlayers = 3.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.geo.settings = 3.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.googleanalytics = 1.4.3
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.indexing = 1.8
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.jsonmigrator = 0.2
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.onlogin = 1.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.quickupload = 1.6.4
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.setuphelpers = 0.6.3
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.z3cform.mapwidget = 2.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-collective.z3cform.widgets = 1.0b9
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-five.pt = 2.2.2
-
-# Required by:
-# rdflib==4.1.2
-html5lib = 0.95
-
-# Required by:
-# rdflib==4.1.2
-isodate = 0.5.0
-
-# Required by:
-# org.bccvl.theme==1.8.2.dev0
-plone.app.themingplugins = 1.0b1
-
-# Required by:
-# plone.app.contenttypes==1.1b3
-plone.formwidget.querystring = 1.1.2
-
-# Required by:
-# collective.profiler==0.3
-profilehooks = 1.7.1
-
-# Required by:
-# rdflib==4.1.2
-pyparsing = 2.0.2
-
-# Required by:
-# org.bccvl.compute==1.8.1-dev
-python-xmp-toolkit = 2.0.1
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-requests-oauthlib = 0.5.0
-
-# Required by:
-# org.bccvl.site==1.8.4.dev0
-sc.social.like = 1.0.1
+# org.bccvl.site==1.8.4
+transmogrify.dexterity = 1.2
 
 # Required by:
 # collective.quickupload==1.6.4
