--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -24,7 +24,7 @@ mr.developer = 1.26
 org.bccvl.compute = 1.8.1
 org.bccvl.site = 1.8.4
 org.bccvl.testsetup = 1.8.1
-org.bccvl.theme = 1.8.2
+org.bccvl.theme = 1.8.3
 org.bccvl.tasks = 1.8.1
 
 celery = 3.1.17
@@ -65,6 +65,7 @@ collective.transmogrifier = 1.5
 dexterity.membrane = 0.4
 plone.app.transmogrifier = 1.3
 transmogrify.dexterity = 1.5.1
+plone.app.textfield = 1.2.4
 
 # plone updates
 plone.subrequest = 1.6.8
