--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -22,9 +22,9 @@ mr.developer = 1.26
 
 # BCCVL Projects
 org.bccvl.compute = 1.8.1
-org.bccvl.site = 1.8.4
+org.bccvl.site = 1.8.5rc1
 org.bccvl.testsetup = 1.8.1
-org.bccvl.theme = 1.8.3
+org.bccvl.theme = 1.8.4rc1
 org.bccvl.tasks = 1.8.1
 
 celery = 3.1.17
