remove stuff no longer in use

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -54,34 +54,11 @@ environment-vars =
     TZ ${site:timezone}
     INTERNAL_URL http://127.0.0.1:${ports:balancer}
     CELERY_JSON_CONFIG ${site:celery_json_config}
-zope-conf-additional =
-    <product-config gu.plone.rdf>
-        inifile ${ordf-conf:output}
-        baseuri ${rdf-settings:baseuri}
-    </product-config>
+#zope-conf-additional =
 #    <product-config zc.z3monitor>
 #        port ${ports:monitor}
-#    </product-config>
-#    <product-config affinitic.zamqp>
-#        conn1 ${plone-sites:main}@ausncbroker
-#    </product-config>
-#    <product-config org.ausnc.broker>
-#        userid ${mq-settings:user}
-#        password ${mq-settings:password}
-#        hostname ${hosts:queue}
-#        port ${ports:queue}
-#    </product-config>
-#
+#    </product-config>#
 #    trusted-proxy ${site:hostname}
-# zope-conf-additional =
-#     <product-config affinitic.zamqp>
-#         ${:_buildout_section_name_} ${plone-sites:main}@queueService
-#     </product-config>
-
-[rdf-settings]
-storeurl = http://127.0.0.1:6801/
-baseuri = http://${site:hostname}/individual/
-# baseuri has to end with / or #
 
 # Plone sites - used in VirtualHost configuration
 [plone-sites]
@@ -98,7 +75,6 @@ password = guest
 # AEST-10 equals Queensland non DST time
 timezone = AEST-10
 hostname = www.bccvl.org.au
-schemahost = ns.bccvl.org.au
 # TODO: this might be good to do in salt
 celery_json_config = ${buildout:directory}/etc/celery.json
 
