--- a/buildout.d/experimental.cfg
+++ b/buildout.d/experimental.cfg
@@ -3,7 +3,7 @@
 find_links +=
   https://github.com/collective/collective.jsonify/archive/078b287c5dbb4870e5280ff1d44322184992fdf9.tar.gz#egg=collective.jsonify-0.3.dev0
 
-auto-checkout +=
+#auto-checkout +=
 #    mockup
 #    Products.TinyMCE
 #    plone.app.toolbar
@@ -17,12 +17,12 @@ auto-checkout +=
 
 [instance-settings]
 eggs +=
-    plone.app.widgets[archetypes,dexterity]
-    plone.app.toolbar
-    plone.app.workflowmanager
-    plone.app.openid
-    eea.facetednavigation
+#    plone.app.toolbar
+#    plone.app.workflowmanager
+#    plone.app.openid
+#    plone.app.widgets[archetypes,dexterity]
+#    collective.taxonomy
+#    wildcard.foldercontents
+#    plone.mocktestcase
 #    collective.jsonify # has a nice jsonify query and list view for content
 
-[versions]
-plone.app.vocabularies = 2.1.14
