--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -42,28 +42,29 @@ plone.app.contenttypes = 1.1b3
 zc.queue = 1.3
 backports.ssl-match-hostname = 3.4.0.2
 Products.AutoUserMakerPASPlugin = 1.1
+Products.TinyMCE = 1.3.13
 
 
 # Bugfix overrides
-# due to a bug in plone.session 3.5.1, 3.5.2 and 3.5.3 pin it
-plone.session = 3.5.5
 # fetch quintagroup.transmogrifier develop version so that we can use collective.transmogrifier > 1.4
 quintagroup.transmogrifier = 0.5dev
 collective.transmogrifier = 1.5
 dexterity.membrane = 0.4
 plone.app.transmogrifier = 1.3
-transmogrify.dexterity = 1.5.1
+transmogrify.dexterity = 1.5.2
 plone.app.textfield = 1.2.4
 
 # plone updates
-plone.subrequest = 1.6.8
-#plone.app.widgets = 1.8.0
 plone.app.jquery = 1.8.3
 
 
 # update pending in next plone release
-#plone.app.event = 1.2.7
+plone.app.querystring = 1.2.6
 plone.app.event = 1.1.4
 plone.api = 1.3.2
 #plone.formwidget.recurrence = 1.2.5
 plone.formwidget.datetime = 1.1
+
+eea.facetednavigation = 8.1
+eea.faceted.vocabularies = 5.1
+eea.jquery = 8.4
