update oauthlib version pin

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -36,7 +36,7 @@ cssselect = 0.9.1
 GDAL = 1.9.1
 lxml = 3.3.5
 rdflib = 4.1.2
-rdflib-zodb = 1.0
+oauthlib = 1.0.3
 # contenttypes 1.1b3 has unusable version constraints b4 sholud be fine again
 plone.app.contenttypes = 1.1b3
 zc.queue = 1.3
