update various base packages and picked versions

--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -6,20 +6,14 @@ Products.PrintingMailHost = 0.7
 collective.profiler = 0.3
 collective.recipe.backup = 2.18
 collective.recipe.plonesite = 1.8.2
-collective.z3cform.colorpicker = 1.1
 gdata = 2.0.18
-geopy = 0.99
-icalendar = 3.7
+gu.z3cform.rdf = 0.5.5
+icalendar = 3.6.2
 ipdb = 0.8
 ipython = 2.1.0
-oauthlib = 0.7.2
-persistent = 4.0.8
 plone.app.debugtoolbar = 1.0a3
-plone.app.robotframework = 0.9.8
 plone.event = 1.1
 plone.formwidget.recurrence = 1.2.3
-pygeoif = 0.4.1
-requests = 2.7.0
 robotframework-ride = 1.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
@@ -27,27 +21,19 @@ z3c.recipe.staticlxml = 0.10
 zptlint = 0.2.4
 
 # Required by:
-# rdflib-zodb==1.0
-BTrees = 4.0.8
-
-# Required by:
-# collective.geo.mapwidget==2.1.2
-BeautifulSoup = 3.2.1
-
-# Required by:
 # ordf==0.36-gu1
 Pairtree = 0.5.8
 
 # Required by:
-# plone.app.folderui==0.03-gurc5
+# org.bccvl.site==1.8.6.dev
 Products.AdvancedQuery = 3.0.3
 
 # Required by:
-# plone.app.event==1.1.4
+# plone.app.event==1.1.5
 Products.DateRecurringIndex = 2.1
 
 # Required by:
-# org.bccvl.site==1.8.4
+# org.bccvl.site==1.8.6.dev
 Products.ShibbolethPermissions = 0.8b2
 
 # Required by:
@@ -55,68 +41,31 @@ Products.ShibbolethPermissions = 0.8b2
 SPARQLWrapper = 1.6.0
 
 # Required by:
-# plone.app.event==1.1.4
+# plone.app.event==1.1.5
 collective.elephantvocabulary = 0.2.4
 
 # Required by:
-# org.bccvl.site==1.8.4
-collective.geo.contentlocations = 3.1
-
-# Required by:
-# org.bccvl.site==1.8.4
-collective.geo.geographer = 2.0
-
-# Required by:
-# org.bccvl.site==1.8.4
-collective.geo.kml = 3.2
-
-# Required by:
-# collective.z3cform.mapwidget==2.0
-# org.bccvl.site==1.8.4
-collective.geo.mapwidget = 2.1.2
-
-# Required by:
-# org.bccvl.site==1.8.4
-collective.geo.openlayers = 3.1
-
-# Required by:
-# org.bccvl.site==1.8.4
-collective.geo.settings = 3.0
-
-# Required by:
-# org.bccvl.site==1.8.4
+# org.bccvl.site==1.8.6.dev
 collective.googleanalytics = 1.4.3
 
 # Required by:
-# org.bccvl.site==1.8.4
+# org.bccvl.site==1.8.6.dev
 collective.indexing = 1.8
 
 # Required by:
-# org.bccvl.site==1.8.4
+# org.bccvl.site==1.8.6.dev
 collective.jsonmigrator = 0.2
 
 # Required by:
-# org.bccvl.site==1.8.4
+# org.bccvl.site==1.8.6.dev
 collective.onlogin = 1.0
 
 # Required by:
-collective.quickupload = 1.6.4
-# org.bccvl.site==1.8.4
-
-# Required by:
-# org.bccvl.site==1.8.4
+# org.bccvl.site==1.8.6.dev
 collective.setuphelpers = 0.6.3
 
 # Required by:
-# org.bccvl.site==1.8.4
-collective.z3cform.mapwidget = 2.0
-
-# Required by:
-# org.bccvl.site==1.8.4
-collective.z3cform.widgets = 1.0b9
-
-# Required by:
-# org.bccvl.site==1.8.4
+# org.bccvl.site==1.8.6.dev
 five.pt = 2.2.2
 
 # Required by:
@@ -128,16 +77,20 @@ html5lib = 0.95
 isodate = 0.5.0
 
 # Required by:
-# org.bccvl.theme==1.8.3.dev
+# gu.z3cform.rdf==0.5.5
+ordf = 0.36-gu1
+
+# Required by:
+# org.bccvl.theme==1.8.5.dev
 plone.app.themingplugins = 1.0b1
 
 # Required by:
-# plone.app.contenttypes==1.1b3
+# plone.app.contenttypes==1.1b5
 plone.formwidget.querystring = 1.1.2
 
 # Required by:
 # collective.profiler==0.3
-profilehooks = 1.7.1
+profilehooks = 1.7
 
 # Required by:
 # rdflib==4.1.2
@@ -148,20 +101,8 @@ pyparsing = 2.0.2
 python-xmp-toolkit = 2.0.1
 
 # Required by:
-# org.bccvl.site==1.8.4
+# org.bccvl.site==1.8.6.dev
 requests-oauthlib = 0.5.0
-
-# Required by:
-# org.bccvl.site==1.8.4
-sc.social.like = 1.0.1
-
-# Required by:
-# org.bccvl.site==1.8.4
-transmogrify.dexterity = 1.2
-
-# Required by:
-# collective.quickupload==1.6.4
-ua-parser = 0.3.5
 
 # Required by:
 # plone.app.themingplugins==1.0b1
