--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -30,19 +30,35 @@ anyjson = 0.3.3
 # other packages maintained by us
 gu.transmogrifier = 0.5.0
 
-
 # other packages
 cssselect = 0.9.1
 GDAL = 1.9.1
 lxml = 3.3.5
 rdflib = 4.1.2
 oauthlib = 1.0.3
-# contenttypes 1.1b3 has unusable version constraints b4 sholud be fine again
-plone.app.contenttypes = 1.1b3
-zc.queue = 1.3
+
 backports.ssl-match-hostname = 3.4.0.2
 Products.AutoUserMakerPASPlugin = 1.1
-Products.TinyMCE = 1.3.13
+
+# Dexterity Pins
+plone.app.contenttypes = 1.1b5
+plone.dexterity = 2.3.4
+plone.app.dexterity = 2.0.15
+plone.schemaeditor = 1.3.11
+plone.app.event = 1.1.5
+plone.app.portlets = 2.5.4
+
+# update overly outdated time zone package
+pytz = 2015.4
+
+
+# update pending in next plone release
+AccessControl = 3.0.11
+plone.app.querystring = 1.2.7
+plone.api = 1.4.6
+plone.app.blob = 1.5.16
+#plone.formwidget.recurrence = 1.2.5
+plone.formwidget.datetime = 1.1
 
 
 # Bugfix overrides
@@ -56,14 +72,8 @@ plone.app.textfield = 1.2.4
 
 # plone updates
 plone.app.jquery = 1.8.3
+Products.TinyMCE = 1.3.13
 
-
-# update pending in next plone release
-plone.app.querystring = 1.2.6
-plone.app.event = 1.1.4
-plone.api = 1.3.2
-#plone.formwidget.recurrence = 1.2.5
-plone.formwidget.datetime = 1.1
 
 eea.facetednavigation = 8.1
 eea.faceted.vocabularies = 5.1
