--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -47,6 +47,7 @@ plone.app.dexterity = 2.0.15
 plone.schemaeditor = 1.3.11
 plone.app.event = 1.1.5
 plone.app.portlets = 2.5.4
+plone.formwidget.recurrence = 1.2.3
 
 # update overly outdated time zone package
 pytz = 2015.4
