--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -15,11 +15,11 @@ setuptools = 2.2
 mr.developer = 1.26
 
 # BCCVL Projects
-org.bccvl.compute = 1.8.1
-org.bccvl.site = 1.8.5
-org.bccvl.testsetup = 1.8.1
-org.bccvl.theme = 1.8.4
-org.bccvl.tasks = 1.8.1
+org.bccvl.compute = 1.9.0rc1
+org.bccvl.site = 1.9.0rc1
+org.bccvl.testsetup = 1.9.0rc1
+org.bccvl.theme = 1.9.0rc1
+org.bccvl.tasks = 1.9.0rc1
 
 celery = 3.1.17
 kombu = 3.0.24
