--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -103,6 +103,7 @@ python-xmp-toolkit = 2.0.1
 # Required by:
 # org.bccvl.site==1.8.6.dev
 requests-oauthlib = 0.5.0
+requests = 2.7.0
 
 # Required by:
 # plone.app.themingplugins==1.0b1
