move test parts into separate config file for easier re-use

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -182,7 +182,7 @@ packages-under-test =
 recipe = zc.recipe.testrunner
 eggs = ${instance-settings:eggs}
 defaults = ['--auto-color', '--auto-progress']
-#defaults = ['-s', 'my.pakcage', '--auto-color', '--auto-progress']
+#defaults = ['-s', 'my.package', '--auto-color', '--auto-progress']
 
 [test-coverage]
 recipe = zc.recipe.testrunner
