--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -3,6 +3,7 @@
 extends =
     base.cfg
     sources.cfg
+    test.cfg
 
 extensions += mr.developer
 
@@ -33,40 +34,6 @@ auto-checkout +=
     org.bccvl.testsetup
     org.bccvl.compute
     org.bccvl.tasks
-
-[test]
-eggs +=
-    org.bccvl.site [test]
-    org.bccvl.theme [test]
-    org.bccvl.compute [test]
-defaults = ['--auto-color', '--auto-progress',
-            '-m', 'org.bccvl.site',
-            '-m', 'org.bccvl.theme',
-            '-m', 'org.bccvl.compute',
-           ]
-
-[test-coverage]
-defaults = ['--coverage', '../../coverage', '-v', '--auto-progress',
-            '-m', 'org.bccvl.site',
-            '-m', 'org.bccvl.theme',
-            '-m', 'org.bccvl.compute',
-           ]
-
-[jenkins-test]
-defaults = ['--auto-color', '--auto-progress', '--xml',
-            '-m', 'org.bccvl.site',
-            '-m', 'org.bccvl.theme',
-            '-m', 'org.bccvl.compute',
-           ]
-
-[jenkins]
-jenkins-test-eggs +=
-    org.bccvl.site [test]
-    org.bccvl.theme [test]
-jenkins-test-directories +=
-    src/org.bccvl.site
-    src/org.bccvl.theme
-
 
 [instance-settings]
 # access local theme resurces at ${buildout:directory}/resources/theme/my.project/logo.png
