--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -18,11 +18,11 @@ setuptools = 2.2
 mr.developer = 1.26
 
 # BCCVL Projects
-org.bccvl.compute = 1.9.0rc1
-org.bccvl.site = 1.9.0rc3
-org.bccvl.testsetup = 1.9.0rc2
-org.bccvl.theme = 1.9.0rc3
-org.bccvl.tasks = 1.9.0rc3
+org.bccvl.compute = 1.9.0
+org.bccvl.site = 1.9.0
+org.bccvl.testsetup = 1.9.1
+org.bccvl.theme = 1.9.0
+org.bccvl.tasks = 1.9.0
 
 celery = 3.1.17
 kombu = 3.0.24
