zope acces log rotation event log to syslog

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -54,6 +54,20 @@ environment-vars =
     TZ ${site:timezone}
     INTERNAL_URL http://127.0.0.1:${ports:balancer}
     CELERY_JSON_CONFIG ${site:celery_json_config}
+event-log = disable
+event-log-level = INFO
+event-log-maxsize = 3mb
+event-log-old-files = 2
+event-log-custom =
+  <syslog>
+      level INFO
+      facility local6
+      address /dev/log
+      format %(asctime)s %(name)s[%(process)d]: %(levelname)s %(message)s
+      dateformat %b %d %H:%M:%S
+  </syslog>
+access-log-max-size = 3mb
+access-log-old-files = 2
 #zope-conf-additional =
 #    <product-config zc.z3monitor>
 #        port ${ports:monitor}
