add version pin for raven

--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -19,6 +19,7 @@ sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
 z3c.recipe.staticlxml = 0.10
 zptlint = 0.2.4
+raven = 5.7.2
 
 # Required by:
 # ordf==0.36-gu1
