add zodbupdate to buildout

--- a/buildout.d/build.cfg
+++ b/buildout.d/build.cfg
@@ -1,7 +1,9 @@
 
 [zopepy]
 recipe = zc.recipe.egg
-eggs = ${instance-settings:eggs}
+eggs =
+     ${instance-settings:eggs}
+     zodbupdate
 extra-paths = ${instance-settings:extra-paths}
 interpreter = zopepy
 
