add version pin for zodbupdate

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -13,6 +13,7 @@ find-links +=
 zc.buildout = 2.2.1
 setuptools = 2.2
 mr.developer = 1.26
+zodbupdate = 0.5
 
 # BCCVL Projects
 org.bccvl.compute = 1.9.1rc1
