--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -16,11 +16,11 @@ mr.developer = 1.26
 zodbupdate = 0.5
 
 # BCCVL Projects
-org.bccvl.compute = 1.9.1rc2
-org.bccvl.site = 1.9.2rc6
-org.bccvl.testsetup = 1.9.2rc1
-org.bccvl.theme = 1.9.4rc5
-org.bccvl.tasks = 1.9.1rc1
+org.bccvl.compute = 1.9.1
+org.bccvl.site = 1.9.2
+org.bccvl.testsetup = 1.9.2
+org.bccvl.theme = 1.9.4
+org.bccvl.tasks = 1.9.1
 
 celery = 3.1.17
 kombu = 3.0.24
