auto checkout movelib

--- a/buildout.d/development.cfg
+++ b/buildout.d/development.cfg
@@ -34,6 +34,7 @@ auto-checkout +=
     org.bccvl.testsetup
     org.bccvl.compute
     org.bccvl.tasks
+    org.bccvl.movelib
 
 [instance-settings]
 # access local theme resurces at ${buildout:directory}/resources/theme/my.project/logo.png
