--- a/buildout.d/sources.cfg
+++ b/buildout.d/sources.cfg
@@ -29,5 +29,6 @@ org.bccvl.theme = git ${remotes:bccvl}/org.bccvl.theme.git pushurl=${remotes:bcc
 org.bccvl.testsetup = git ${remotes:bccvl}/org.bccvl.testsetup.git pushurl=${remotes:bccvl_push}/org.bccvl.testsetup.git branch=develop
 org.bccvl.compute = git ${remotes:bccvl}/org.bccvl.compute.git pushurl=${remotes:bccvl_push}/org.bccvl.compute.git branch=develop
 org.bccvl.tasks = git ${remotes:bccvl}/org.bccvl.tasks.git pushurl=${remotes:bccvl_push}/org.bccvl.tasks.git branch=develop
+org.bccvl.movelib = git ${remotes:bccvl}/org.bccvl.movelib.git pushurl=${remotes:bccvl_push}/org.bccvl.movelib.git branch=develop
 
 gu.transmogrifier = git ${remotes:ersgh}/gu.transmogrifier.git pushurl=${remotes:ersgh_push}/gu.transmogrifier.git
