add tasks and movelib to list of packages under test

--- a/buildout.d/test.cfg
+++ b/buildout.d/test.cfg
@@ -9,6 +9,8 @@ defaults = ['--auto-color', '--auto-progress',
             '-s', 'org.bccvl.site',
             '-s', 'org.bccvl.theme',
             '-s', 'org.bccvl.compute',
+            '-s', 'org.bccvl.tasks',
+            '-s', 'org.bccvl.movelib'
            ]
 
 [test-coverage]
@@ -16,6 +18,8 @@ defaults = ['--coverage', '../../coverage', '-v', '--auto-progress',
             '-s', 'org.bccvl.site',
             '-s', 'org.bccvl.theme',
             '-s', 'org.bccvl.compute',
+            '-s', 'org.bccvl.tasks',
+            '-s', 'org.bccvl.movelib'
            ]
 
 [jenkins-test]
@@ -23,6 +27,8 @@ defaults = ['--auto-color', '--auto-progress', '--xml',
             '-s', 'org.bccvl.site',
             '-s', 'org.bccvl.theme',
             '-s', 'org.bccvl.compute',
+            '-s', 'org.bccvl.tasks',
+            '-s', 'org.bccvl.movelib'
            ]
 
 [jenkins]
