add more repos for testing

--- a/buildout.d/test.cfg
+++ b/buildout.d/test.cfg
@@ -5,6 +5,8 @@ eggs +=
     org.bccvl.site [test]
     org.bccvl.theme [test]
     org.bccvl.compute [test]
+    org.bccvl.tasks
+    org.bccvl.movelib
 defaults = ['--auto-color', '--auto-progress',
             '-s', 'org.bccvl.site',
             '-s', 'org.bccvl.theme',
@@ -35,6 +37,12 @@ defaults = ['--auto-color', '--auto-progress', '--xml',
 jenkins-test-eggs +=
     org.bccvl.site [test]
     org.bccvl.theme [test]
+    org.bccvl.compute [test]
+    org.bccvl.tasks
+    olg.bccvl.movelib
 jenkins-test-directories +=
     org.bccvl.site
     org.bccvl.theme
+    org.bccvl.compute
+    org.bccvl.tasks
+    olg.bccvl.movelib
