typo package name

--- a/buildout.d/test.cfg
+++ b/buildout.d/test.cfg
@@ -39,10 +39,10 @@ jenkins-test-eggs +=
     org.bccvl.theme [test]
     org.bccvl.compute [test]
     org.bccvl.tasks
-    olg.bccvl.movelib
+    org.bccvl.movelib
 jenkins-test-directories +=
     org.bccvl.site
     org.bccvl.theme
     org.bccvl.compute
     org.bccvl.tasks
-    olg.bccvl.movelib
+    org.bccvl.movelib
