update qa release

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -16,11 +16,12 @@ mr.developer = 1.26
 zodbupdate = 0.5
 
 # BCCVL Projects
-org.bccvl.compute = 1.9.1
-org.bccvl.site = 1.9.2
-org.bccvl.testsetup = 1.9.2
-org.bccvl.theme = 1.9.5
-org.bccvl.tasks = 1.9.1
+org.bccvl.compute = 1.9.2rc1
+org.bccvl.site = 1.9.3rc1
+org.bccvl.testsetup = 1.9.3rc1
+org.bccvl.theme = 1.9.6rc1
+org.bccvl.tasks = 1.9.2rc1
+org.bccvl.movelib = 1.0.0rc1
 
 celery = 3.1.17
 kombu = 3.0.24
