--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -17,12 +17,12 @@ mr.developer = 1.26
 zodbupdate = 0.5
 
 # BCCVL Projects
-org.bccvl.compute = 1.9.2rc1
-org.bccvl.site = 1.9.3rc1
-org.bccvl.testsetup = 1.9.3rc1
-org.bccvl.theme = 1.9.6rc1
-org.bccvl.tasks = 1.9.2rc1
-org.bccvl.movelib = 1.0.0rc1
+org.bccvl.compute = 1.9.2
+org.bccvl.site = 1.9.3
+org.bccvl.testsetup = 1.9.3
+org.bccvl.theme = 1.9.6
+org.bccvl.tasks = 1.9.2
+org.bccvl.movelib = 1.0.0
 
 celery = 3.1.17
 kombu = 3.0.24
