update tasks config

--- a/buildout.d/celery.json.in
+++ b/buildout.d/celery.json.in
@@ -17,11 +17,15 @@
         "RESULT_SERIALIZER": "json",
         "TASK_RESULT_EXPIRES": 3600,
         "ROUTES": [
-            {"org.bccvl.tasks.plone.set_progress": {"queue": "plone", "routing_key": "plone"}},
             {"org.bccvl.tasks.plone.import_ala": {"queue": "plone", "routing_key": "plone"}},
             {"org.bccvl.tasks.plone.import_cleanup": {"queue": "plone", "routing_key": "plone"}},
+            {"org.bccvl.tasks.plone.import_file_metadata": {"queue": "plone", "routing_key": "plone"}},
             {"org.bccvl.tasks.plone.import_result": {"queue": "plone", "routing_key": "plone"}},
+            {"org.bccvl.tasks.plone.set_progress": {"queue": "plone", "routing_key": "plone"}},
             {"org.bccvl.tasks.datamover.move": {"queue": "datamover", "routing_key": "datamover"}},
+            {"org.bccvl.tasks.datamover.move": {"queue": "datamover", "routing_key": "datamover"}},
+            {"org.bccvl.tasks.datamover.pull_occurrences_from_ala": {"queue": "datamover", "routing_key": "datamover"}},
+            {"org.bccvl.tasks.datamover.update_metadata": {"queue": "datamover", "routing_key": "datamover"}},
             {"org.bccvl.tasks.export_services.export_result": {"queue": "datamover", "routing_key": "datamover"}},
             {"org.bccvl.tasks.compute.r_task": {"queue": "worker", "routing_key": "worker"}},
             {"org.bccvl.tasks.compute.perl_task": {"queue": "worker", "routing_key": "worker"}},
