pinned ipython to 4.0.0

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -40,6 +40,7 @@ GDAL = 1.9.1
 lxml = 3.3.5
 rdflib = 4.1.2
 oauthlib = 1.0.3
+ipython = 4.0.0
 
 backports.ssl-match-hostname = 3.4.0.2
 Products.AutoUserMakerPASPlugin = 1.1
