update buildout with new config entries

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -37,7 +37,12 @@ eggs =
     roman # temporary bypass for https://bugs.launchpad.net/zope2/+bug/539181    Plone
     org.bccvl.site [deprecated] # our policy package... should pull in any other dependencies
     celery # need the celery start scripts
-zcml =
+zcml = org.bccvl.theme
+environment-vars =
+    PTS_LANGUAGES en
+    zope_i18n_allowed_languages en
+    zope_i18n_compile_mo_files true
+    TZ ${site:timezone}
 products =
 user = admin:admin
 zodb-cache-size = 10000
@@ -50,10 +55,6 @@ blob-storage = ${zeoserver:blob-storage}
 zeo-address = ${hosts:zeoserver}:${ports:zeoserver}
 effective-user = ${users:zope}
 extra-paths = ${buildout:parts-directory}/site-packages
-environment-vars =
-    TZ ${site:timezone}
-    INTERNAL_URL http://127.0.0.1:${ports:balancer}
-    CELERY_JSON_CONFIG ${site:celery_json_config}
 event-log = disable
 event-log-level = INFO
 event-log-maxsize = 3mb
