add PrintingMailHost for debug mode

--- a/files/base.cfg
+++ b/files/base.cfg
@@ -60,6 +60,7 @@ eggs =
   celery
   RelStorage
   psycopg2
+  Products.PrintingMailHost
 locales = ${buildout:directory}/locales
 zodb-cache-size = 30000
 zserver-threads = 2
