--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -42,6 +42,7 @@ GDAL = 1.11.2
 RelStorage = 1.6.0b3
 psycopg2 = 2.6.1
 perfmetrics = 2.0
+Products.PrintingMailHost = 0.8
 
 # Bugfix overrides
 # fetch quintagroup.transmogrifier develop version so that we can use collective.transmogrifier > 1.4
