--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -48,6 +48,13 @@ Products.PrintingMailHost = 0.8
 # fetch quintagroup.transmogrifier develop version so that we can use collective.transmogrifier > 1.4
 quintagroup.transmogrifier = 0.5dev-r0
 
+# plone version overrides + dependencies
+plone.app.users = 2.0.4
+collective.emailconfirmationregistration = 1.2.0b5
+plone.formwidget.captcha = 1.0.2
+plone.formwidget.recaptcha = 2.0a2
+collective.z3cform.norobots = 1.4.2.2
+
 # pin everything else
 Chameleon = 2.24
 amqp = 1.4.9
@@ -71,6 +78,14 @@ requests = 2.9.1
 simplegeneric = 0.8.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
+
+# Required by:
+# plone.formwidget.recaptcha==2.0a2
+norecaptcha = 0.3.0
+
+# Required by:
+# plone.formwidget.captcha==1.0.2
+skimpyGimpy = 1.4
 
 # Required by:
 # org.bccvl.site==1.10.2
