--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -80,7 +80,15 @@ plone.app.textfield = 1.2.4
 plone.app.jquery = 1.8.3
 Products.TinyMCE = 1.3.13
 
-
 eea.facetednavigation = 8.1
 eea.faceted.vocabularies = 5.1
 eea.jquery = 8.4
+
+# update plone packages / 
+plone.app.users = 2.0.4
+collective.emailconfirmationregistration = 1.2.0b5
+plone.formwidget.captcha = 1.0.2
+plone.formwidget.recaptcha = 2.0a2
+collective.z3cform.norobots = 1.4.2.2
+
+
