pin plone.app.themingplugins to 1.0

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -69,6 +69,7 @@ transmogrify.dexterity = 1.5.2
 # plone updates
 plone.app.jquery = 1.8.3
 
+plone.app.themingplugins = 1.0
 eea.facetednavigation = 8.1
 eea.faceted.vocabularies = 5.1
 eea.jquery = 8.4
