--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -117,3 +117,6 @@ z3c.recipe.scripts = 1.0.1
 # Required by:
 # z3c.recipe.staticlxml==0.10
 zc.recipe.cmmi = 1.3.6
+
+norecaptcha = 0.3.0
+skimpyGimpy = 1.4
