--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -46,24 +46,15 @@ backports.ssl-match-hostname = 3.4.0.2
 Products.AutoUserMakerPASPlugin = 1.1
 
 # Dexterity Pins
-plone.app.contenttypes = 1.1b5
 plone.dexterity = 2.3.1
-plone.app.dexterity = 2.0.15
-plone.schemaeditor = 1.3.11
-plone.app.event = 1.1.5
-plone.app.portlets = 2.5.4
-plone.formwidget.recurrence = 1.2.3
 
 # update overly outdated time zone package
 pytz = 2015.4
 
 
 # update pending in next plone release
-AccessControl = 3.0.11
-plone.app.querystring = 1.2.7
 plone.api = 1.4.6
 plone.app.blob = 1.5.16
-#plone.formwidget.recurrence = 1.2.5
 plone.formwidget.datetime = 1.1
 
 
@@ -74,13 +65,13 @@ collective.transmogrifier = 1.5
 dexterity.membrane = 0.4
 plone.app.transmogrifier = 1.3
 transmogrify.dexterity = 1.5.2
-plone.app.textfield = 1.2.4
 
 # plone updates
 plone.app.jquery = 1.8.3
 Products.TinyMCE = 1.3.13
 
 
+plone.app.themingplugins = 1.0
 eea.facetednavigation = 8.1
 eea.faceted.vocabularies = 5.1
 eea.jquery = 8.4
