pin plone.recipe.zope2instance

--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -51,6 +51,9 @@ collective.emailconfirmationregistration = 1.2.0b5
 plone.formwidget.captcha = 1.0.2
 plone.formwidget.recaptcha = 2.0a2
 collective.z3cform.norobots = 1.4.2.2
+# zope2instance 4.2.19 changed behaviour, so we revert back
+plone.recipe.zope2instance = 4.2.18
+
 
 # pin everything else
 Chameleon = 2.24
