pin plone.recipe.zope2instance

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -54,7 +54,8 @@ quintagroup.transmogrifier = 0.5dev
 collective.transmogrifier = 1.5.1
 plone.app.transmogrifier = 1.4
 transmogrify.dexterity = 1.6.1
-
+# zope2instance 4.2.19 changed behaviour, so we revert back
+plone.recipe.zope2instance = 4.2.18
 
 plone.app.themingplugins = 1.0
 eea.facetednavigation = 8.7
