update qa release versions

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -17,12 +17,12 @@ mr.developer = 1.26
 zodbupdate = 0.5
 
 # BCCVL Projects
-org.bccvl.compute = 1.10.0
-org.bccvl.site = 1.10.6
-org.bccvl.testsetup = 1.10.0
-org.bccvl.theme = 1.10.10
-org.bccvl.tasks = 1.10.2
-org.bccvl.movelib = 1.1.0
+org.bccvl.compute = 1.11.0-rc1
+org.bccvl.site = 1.11.0-rc1
+org.bccvl.testsetup = 1.11.0-rc1
+org.bccvl.theme = 1.11.0-rc1
+org.bccvl.tasks = 1.11.0-rc1
+org.bccvl.movelib = 1.11.0-rc1
 
 celery = 3.1.17
 kombu = 3.0.24
