--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -7,26 +7,24 @@ collective.profiler = 0.3
 collective.recipe.backup = 2.18
 collective.recipe.plonesite = 1.8.2
 gdata = 2.0.18
-gu.z3cform.rdf = 0.5.5
-icalendar = 3.6.2
+icalendar = 3.7
 ipdb = 0.8
-ipython = 2.1.0
+path.py = 8.1.2
 plone.app.debugtoolbar = 1.0a3
 plone.event = 1.1
-plone.formwidget.recurrence = 1.2.3
+ptyprocess = 0.5
+python-xmp-toolkit = 2.0.1
+raven = 5.7.2
+requests = 2.7.0
 robotframework-ride = 1.1
+simplegeneric = 0.8.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
 z3c.recipe.staticlxml = 0.10
 zptlint = 0.2.4
-raven = 5.7.2
 
 # Required by:
-# ordf==0.36-gu1
-Pairtree = 0.5.8
-
-# Required by:
-# org.bccvl.site==1.8.6.dev
+# org.bccvl.site==1.11.0.dev
 Products.AdvancedQuery = 3.0.3
 
 # Required by:
@@ -34,7 +32,7 @@ Products.AdvancedQuery = 3.0.3
 Products.DateRecurringIndex = 2.1
 
 # Required by:
-# org.bccvl.site==1.8.6.dev
+# org.bccvl.site==1.11.0.dev
 Products.ShibbolethPermissions = 0.8b2
 
 # Required by:
@@ -46,27 +44,27 @@ SPARQLWrapper = 1.6.0
 collective.elephantvocabulary = 0.2.4
 
 # Required by:
-# org.bccvl.site==1.8.6.dev
+# org.bccvl.site==1.11.0.dev
 collective.googleanalytics = 1.4.3
 
 # Required by:
-# org.bccvl.site==1.8.6.dev
+# org.bccvl.site==1.11.0.dev
 collective.indexing = 1.8
 
 # Required by:
-# org.bccvl.site==1.8.6.dev
+# org.bccvl.site==1.11.0.dev
 collective.jsonmigrator = 0.2
 
 # Required by:
-# org.bccvl.site==1.8.6.dev
+# org.bccvl.site==1.11.0.dev
 collective.onlogin = 1.0
 
 # Required by:
-# org.bccvl.site==1.8.6.dev
+# org.bccvl.site==1.11.0.dev
 collective.setuphelpers = 0.6.3
 
 # Required by:
-# org.bccvl.site==1.8.6.dev
+# org.bccvl.site==1.11.0.dev
 five.pt = 2.2.2
 
 # Required by:
@@ -74,49 +72,53 @@ five.pt = 2.2.2
 html5lib = 0.95
 
 # Required by:
+# traitlets==4.1.0
+ipython-genutils = 0.1.0
+
+# Required by:
 # rdflib==4.1.2
 isodate = 0.5.0
 
 # Required by:
-# gu.z3cform.rdf==0.5.5
-ordf = 0.36-gu1
+# plone.formwidget.recaptcha==2.0a2
+norecaptcha = 0.3.0
 
 # Required by:
-# org.bccvl.theme==1.8.5.dev
-plone.app.themingplugins = 1.0b1
+# ipython==4.0.0
+pexpect = 4.0.1
 
 # Required by:
-# plone.app.contenttypes==1.1b5
+# ipython==4.0.0
+pickleshare = 0.6
+
+# Required by:
+# plone.app.contenttypes==1.1
 plone.formwidget.querystring = 1.1.2
 
 # Required by:
 # collective.profiler==0.3
-profilehooks = 1.7
+profilehooks = 1.7.1
 
 # Required by:
 # rdflib==4.1.2
 pyparsing = 2.0.2
 
 # Required by:
-# org.bccvl.compute==1.8.2.dev
-python-xmp-toolkit = 2.0.1
-
-# Required by:
-# org.bccvl.site==1.8.6.dev
+# org.bccvl.site==1.11.0.dev
 requests-oauthlib = 0.5.0
-requests = 2.7.0
 
 # Required by:
-# plone.app.themingplugins==1.0b1
+# plone.formwidget.captcha==1.0.2
+skimpyGimpy = 1.4
+
+# Required by:
+# ipython==4.0.0
+traitlets = 4.1.0
+
+# Required by:
+# plone.app.themingplugins==1.0
 z3c.jbot = 0.7.2
-
-# Required by:
-# collective.xmltestreport==1.3.2
-z3c.recipe.scripts = 1.0.1
 
 # Required by:
 # z3c.recipe.staticlxml==0.10
 zc.recipe.cmmi = 1.3.6
-
-norecaptcha = 0.3.0
-skimpyGimpy = 1.4
