make sure we have all test dependencies installed for jenkins test run

--- a/files/test.cfg
+++ b/files/test.cfg
@@ -38,8 +38,20 @@ arguments = ('coverage', 'report')
 # Jenkins test stuff
 ##############################################################################
 [jenkins]
-jenkins-test-eggs = ${instance:eggs}
+jenkins-test-eggs +=
+    ${instance:eggs}
+    org.bccvl.site [test]
+    org.bccvl.theme [test]
+    org.bccvl.compute [test]
+    org.bccvl.tasks
+    org.bccvl.movelib
 jenkins-test-directories =
+    org.bccvl.site
+    org.bccvl.theme
+    org.bccvl.compute
+    org.bccvl.tasks
+    org.bccvl.movelib
+
 
 [jenkins-test]
 # Creates a "jenkins-test" script in the bin directory of the buildout that
@@ -54,7 +66,13 @@ recipe = collective.xmltestreport
 eggs = ${jenkins:jenkins-test-eggs}
 script = jenkins-test
 environment = jenkins-test-env
-defaults = ['--auto-color', '--auto-progress', '--xml']
+defaults = ['--auto-color', '--auto-progress', '--xml',
+            '-s', 'org.bccvl.site',
+            '-s', 'org.bccvl.theme',
+            '-s', 'org.bccvl.compute',
+            '-s', 'org.bccvl.tasks',
+            '-s', 'org.bccvl.movelib'
+           ]
 
 [jenkins-test-env]
 zope_i18n_compile_mo_files = true
@@ -97,25 +115,3 @@ jenkins-test = ${jenkins-test:bin-directory}/jenkins-test
 recipe = zc.recipe.egg
 eggs = coverage
 
-[jenkins-test]
-defaults = ['--auto-color', '--auto-progress', '--xml',
-            '-s', 'org.bccvl.site',
-            '-s', 'org.bccvl.theme',
-            '-s', 'org.bccvl.compute',
-            '-s', 'org.bccvl.tasks',
-            '-s', 'org.bccvl.movelib'
-           ]
-
-[jenkins]
-jenkins-test-eggs +=
-    org.bccvl.site [test]
-    org.bccvl.theme [test]
-    org.bccvl.compute [test]
-    org.bccvl.tasks
-    org.bccvl.movelib
-jenkins-test-directories +=
-    org.bccvl.site
-    org.bccvl.theme
-    org.bccvl.compute
-    org.bccvl.tasks
-    org.bccvl.movelib
