don't extend non existent settings

--- a/files/test.cfg
+++ b/files/test.cfg
@@ -38,7 +38,7 @@ arguments = ('coverage', 'report')
 # Jenkins test stuff
 ##############################################################################
 [jenkins]
-jenkins-test-eggs +=
+jenkins-test-eggs =
     ${instance:eggs}
     org.bccvl.site [test]
     org.bccvl.theme [test]
