update to qa release

--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -24,12 +24,12 @@ zc.recipe.egg = 2.0.3
 ZConfig = 3.1.0
 
 # BCCVL Projects
-org.bccvl.compute = 1.10.0
-org.bccvl.site = 1.10.3
-org.bccvl.testsetup = 1.10.0
-org.bccvl.theme = 1.10.6
-org.bccvl.tasks = 1.10.0
-org.bccvl.movelib = 1.1.0
+org.bccvl.compute = 1.11.0-rc2
+org.bccvl.site = 1.11.0-rc2
+org.bccvl.testsetup = 1.11.0-rc1
+org.bccvl.theme = 1.11.0-rc1
+org.bccvl.tasks = 1.11.0-rc3
+org.bccvl.movelib = 1.2.0-rc1
 
 # other packages maintained by us
 gu.transmogrifier = 0.5.0
