support wsgi deployment with uwsgi

--- a/files/base.cfg
+++ b/files/base.cfg
@@ -15,6 +15,29 @@ parts =
   test-coverage-report
   jenkins-test
   jenkins-test-coverage
+  wsgiconf
+  wsgiapp
+  uwsgiapp
+
+[wsgiconf]
+recipe = collective.recipe.template
+input = zope.wsgi.in
+output = zope.wsgi
+
+[wsgiapp]
+recipe = zc.recipe.egg
+eggs =
+  ${instance:eggs}
+  repoze.who
+  repoze.tm2
+  repoze.retry
+  Paste
+  PasteScript
+  PasteDeploy
+
+[uwsgiapp]
+recipe = unweb.recipe.uwsgi
+eggs = ${wsgiapp:eggs}
 
 [environment]
 recipe = collective.recipe.environment
