pin uwsgi recipe

--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -53,6 +53,7 @@ plone.formwidget.recaptcha = 2.0a2
 collective.z3cform.norobots = 1.4.2.2
 # zope2instance 4.2.19 changed behaviour, so we revert back
 plone.recipe.zope2instance = 4.2.18
+unweb.recipe.uwsgi = 0.4
 
 
 # pin everything else
