--- a/files/base.cfg
+++ b/files/base.cfg
@@ -84,6 +84,7 @@ eggs =
   RelStorage
   psycopg2
   Products.PrintingMailHost
+  raven
 locales = ${buildout:directory}/locales
 zodb-cache-size = 30000
 zserver-threads = 2
