add movelib test dependencies

--- a/buildout.d/test.cfg
+++ b/buildout.d/test.cfg
@@ -6,7 +6,7 @@ eggs +=
     org.bccvl.theme [test]
     org.bccvl.compute [test]
     org.bccvl.tasks
-    org.bccvl.movelib
+    org.bccvl.movelib [test]
 defaults = ['--auto-color', '--auto-progress',
             '-s', 'org.bccvl.site',
             '-s', 'org.bccvl.theme',
@@ -39,7 +39,7 @@ jenkins-test-eggs +=
     org.bccvl.theme [test]
     org.bccvl.compute [test]
     org.bccvl.tasks
-    org.bccvl.movelib
+    org.bccvl.movelib [test]
 jenkins-test-directories +=
     org.bccvl.site
     org.bccvl.theme
