--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -41,6 +41,7 @@ lxml = 3.3.5
 rdflib = 4.1.2
 oauthlib = 1.0.3
 ipython = 4.0.0
+contextlib2 = 0.5.3
 
 backports.ssl-match-hostname = 3.4.0.2
 Products.AutoUserMakerPASPlugin = 1.1
