--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -42,6 +42,9 @@ rdflib = 4.1.2
 oauthlib = 1.0.3
 ipython = 4.0.0
 contextlib2 = 0.5.3
+selenium = 2.53.2
+six = 1.9.0
+pytz = 2016.4
 
 backports.ssl-match-hostname = 3.4.0.2
 Products.AutoUserMakerPASPlugin = 1.1
